--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SIS">
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.home.MainActivity"></activity>
+        <activity android:name=".view.starting.StartingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
