--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sedra.sis">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".SisApplication"
         android:allowBackup="true"
@@ -10,9 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.SIS">
-        <activity android:name=".view.home.MainActivity"/>
+        android:theme="@style/Theme.SIS"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".view.productdetails.ProductDetailsActivity"></activity>
+        <activity android:name=".view.home.MainActivity" />
         <activity android:name=".view.starting.StartingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
