--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-
+    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
+    implementation 'com.github.dhaval2404:imagepicker:1.8'
     //data store
     implementation "androidx.datastore:datastore:1.0.0-beta01"
     testImplementation 'junit:junit:4.13.2'
