--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
     implementation 'com.github.dhaval2404:imagepicker:1.8'
+    implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
     //data store
     implementation "androidx.datastore:datastore:1.0.0-beta01"
     testImplementation 'junit:junit:4.13.2'
